[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.pyright]
skipunannotated = true
level = 'error'
pythonVersion = "3.12"
reportMissingImports = false
venvPath = "."
venv = ".venv"

[tool.pdm]
[tool.pdm.scripts]
_.env_file = ".env"
test = "pytest"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit >= 2.21.0",
    "black == 22.3.0",
    "pytest >= 7.3.2",
    "flake8 ~= 7.0.0",
    "jupyterlab==3.6.1",
    "ipywidgets==8.0.4",
    "plotly>=5.13.1",
    "fire>=0.5.0",
    "pyright==1.1.304",
    "jsondiff>=2.0.0",
    "cbor2>=5.4.6",
    "time-machine>=2.14.1",
]

[tool.pytest.ini_options]
norecursedirs = [".*", "__pypackages__"]

[project]
name = "st-vibe-check"
version = ""
description = ""
authors = [
    { name = "Clarissa Vazquez", email = "vclarissa101@gmail.com" },
]
dependencies = [
    "boto3==1.28.9",
    "botocore==1.31.39",
    "matplotlib==3.9.*",
    "numpy < 2.0.0",
    "pandas==2.2.*",
    "plotly>=5.13.1",
    "pytest-env>=0.6.2",
    "python-dateutil==2.8.*",
    "requests==2.28.*",
    "requests-cache==1.1.0",
    "scikit-learn==1.3.1",
    "scipy==1.13.*",
    "pillow==10.4.0",
    "streamlit==1.44.*",
    "openpyxl>=3.1.5",
    "timezonefinder>=6.5.2",
    "google-api-python-client>=2.169.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "gspread>=6.2.1",
    "gspread-dataframe>=4.0.0",
    "pydrive>=1.3.1",
]
requires-python = "==3.12.*"
license = { text = "Proprietary" }
